--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="add_widget">Add widget</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
-    <string name="play">Play</string>
+    <string name="play_stop">Play/Stop</string>
     <string name="stop">Stop</string>
     <string name="back">Back</string>
 
