--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,5 @@
 
     <string name="open_webpage">Open webpage</string>
     <string name="image_explorer">Image explorer</string>
-    <string name="audio_player">Audio player</string>
+    <string name="audio_player">Mp3 player</string>
 </resources>
